# sandbox

./: .editorconfig  .gitignore  Makefile  README.md
c-cpp/0-yaml-boost/: config.yml  main.cpp
c-cpp/04-udp-mpegts/: Makefile  README.md  config.c  file.h  main.c  url.c  url.h  util.h
c-cpp/04-udp-mpegts/app-1/: Cargo.toml  build.rs
c-cpp/04-udp-mpegts/app-1/src/: main.rs
c-cpp/04-udp-mpegts/app-1/src/va/: h264.rs  io.rs  mod.rs  mpegts.rs  url.rs
c-cpp/04-udp-mpegts/app-1/static/: 405.html
c-cpp/04-udp-mpegts/mio-tcp/: Cargo.toml  README.md
c-cpp/04-udp-mpegts/mio-tcp/src/: connection.rs  error.rs  factory.rs  handler.rs  handler_http.rs  handler_tcp.rs  handler_ws.rs  helpers.rs  http_router.rs  lib.rs  message.rs  result.rs  router.rs  server.rs  server_builder.rs  server_settings.rs  tokens.rs
c-cpp/04-udp-mpegts/mio-tcp/src/http/: handler.rs  header.rs  method.rs  mod.rs  request.rs  request_error.rs  response.rs
c-cpp/04-udp-mpegts/mio-tcp/src/ws/: handler.rs  mod.rs
c-cpp/05-fifo/: Makefile
c-cpp/06-list-time/: main.c
c-cpp/08-ws-mongoose/: main.c
c-cpp/09-skip-list-1/: main.c
c-cpp/1-cpp-initialization-list/: main.cpp
c-cpp/10-std-map-c/: Makefile  main.c  map.cpp
c-cpp/12-chan/: CMakeLists.txt  Makefile  api.h  buf.c  buf.h  bufs.c  bufs.h  chan.c  chan.h  enc-status.h  enc.c  enc.h  encs.c  encs.h  main.c  msg-i.c  msg-i.h  msg-in.c  msg-in.h  msg-o.c  msg-o.h  msg-out.c  msg-out.h  msgs.c  msgs.h  profile.c  profile.h  signal.c  signal.h
c-cpp/13-h/: main.c
c-cpp/14-v/: main.c
py/: generator.py  iterator_2.py  iterator_3.py  memoryview.py
rust/014-tokio-signal/: Cargo.toml  run.sh
rust/014-tokio-signal/dockerfiles/build-rs/: Dockerfile
rust/014-tokio-signal/src/: main.rs
sql/: join.sql
(+450 files in other folders)
