[package]
name = "tokio-signal"
version = "0.0.1"
edition = "2018"
authors = ["Ivan Egorov <vany.egorov@gmail.com>"]

[dependencies]
tokio-signal = "~0.2.7"
runtime = "0.3.0-alpha.6"
runtime-tokio = "0.3.0-alpha.5"

[dependencies.futures-legacy]
package = "futures"
version = "0.1.28"

[dependencies.futures]
package = "futures-preview"
version = "=0.3.0-alpha.18"
features = ["async-await", "nightly", "compat"]
