[package]
name = "va"
version = "0.1.0"
authors = ["Ivan Egorov <vany.egorov@gmail.com>"]
build = "build.rs"

[dependencies]
mio-tcp = { version = "*", path = "../mio-tcp" }
env_logger = "0.3"
# <MessagePack>
rustc-serialize = "0.3"
rmp = "0.8"
rmp-serialize = "0.8"
# </MessagePack>
libc = "0.2"
lazy_static = "0.2"

[dependencies.clap]
version = "2.20"

[build-dependencies]
bindgen = "0.19.0"
