[package]
name = "mio-tcp"
version = "0.0.1"
authors = ["Ivan Egorov <vany.egorov@gmail.com>"]

[dependencies]
ws              = "0.5"
mio             = "0.6"
slab            = "0.3"
log             = "0.3"
regex           = "0.1"
sha1            = "0.2"
lazy_static     = "0.2"
rustc-serialize = "0.3"
